--- a/app/views/customer/welcome/otp.html.erb
+++ b/app/views/customer/welcome/otp.html.erb
@@ -1,9 +1,28 @@
-<%= form_tag customer_step_three_path, method: :post  do %>
-    OTP: <%= text_field_tag :otp %>
-    <div class=" btn btn-info sending-otp">Send OTP</div>
-    <%= hidden_field_tag 'phone', @phone %>
-    <%= submit_tag 'Proceed' %>
-<% end %>
+<div class="row">
+	<div class="col-sm-4"></div>
+	<div class="col-sm-4">
+		<div class="mfp-dialog clearfix" id="nav-login-dialog">
+			<h3 class="widget-title">OTP</h3>
+			<p>Enter OTP to move further</p>
+			<hr />
+			<%= form_tag customer_step_three_path, method: :post  do %>
+				<div class="form-group">
+					<%= text_field_tag :otp, "", class: 'form-control' %>
+				</div>
+				<%= hidden_field_tag 'phone', @phone %>
+				<%= submit_tag 'Proceed', class: 'btn btn-primary' %>
+				<div class=" btn btn-info sending-otp">Send OTP</div>
+			<% end %>			
+		</div>		
+	</div>
+</div>
+
+<%#= form_tag customer_step_three_path, method: :post  do %>
+     <%#= text_field_tag :otp %>
+    <!-- <div class=" btn btn-info sending-otp">Send OTP</div> -->
+    <%#= hidden_field_tag 'phone', @phone %>
+    <%#= submit_tag 'Proceed' %>
+<%# end %>
 
 <script type="text/javascript" charset="utf-8">
 
