--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -33,6 +33,7 @@
     <div class="gap gap-small"></div>
     <ul class="list-inline">
       <li>
+        <%= link_to 'Register Here', customer_step_one_path %>
         <a href="#nav-account-dialog" class="popup-text">Register Here</a>
       </li>
     </ul>
