work on otp page

--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -229,3 +229,12 @@
     }
   }  
 }
+.otp-min-height{
+  min-height: 450px;
+}
+
+@media(max-width: 767px){
+  .otp-min-height{
+    min-height: inherit;
+  }  
+}
