--- a/app/views/customer/welcome/mobile_number.html.erb
+++ b/app/views/customer/welcome/mobile_number.html.erb
@@ -1,9 +1,8 @@
-<div class="row">
+<div class="row otp-min-height">
 	<div class="col-sm-4"></div>
 	<div class="col-sm-4">
 		<div class="mfp-dialog clearfix" id="nav-login-dialog">
-			<h3 class="widget-title">Phone Number</h3>
-			<p>Enter Your Phone no to get OTP</p>
+			<h3 class="widget-title">Mobile Number</h3>
 			<hr />
 			<%= form_tag customer_step_two_path, method: :post  do %>
 				<div class="form-group">
