--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -36,7 +36,9 @@
     </form>
     <div class="gap gap-small"></div>
     <ul class="list-inline">
-      <li><a href="#nav-account-dialog" class="popup-text">Register Here</a>
+      <li>
+        <%= link_to 'Register Here', customer_step_one_path %>
+        <!--<a href="#nav-account-dialog" class="popup-text">Register Here</a>-->
       </li>
       <li><a href="#nav-pwd-dialog" class="popup-text">Forgot Password?</a>
       </li>
