--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -34,7 +34,7 @@
     <ul class="list-inline">
       <li>
         <%= link_to 'Register Here', customer_step_one_path %>
-        <a href="#nav-account-dialog" class="popup-text">Register Here</a>
+        <!--<a href="#nav-account-dialog" class="popup-text">Register Here</a>-->
       </li>
     </ul>
   </div>
