--- a/app/views/admin/enquiries/show.html.erb
+++ b/app/views/admin/enquiries/show.html.erb
@@ -35,13 +35,21 @@
         Description: <%= @enquiry.service.service_description %><br>
         Category: <%= @enquiry.service.subcategory.category.name %><br>
         Subcategory: <%= @enquiry.service.subcategory.name %><br>
-        Area in meters: <%= @enquiry.service.area_in_meters %><br>
-        Amenities available: <%= @enquiry.service.amenities_available %><br>
-        Nature of service: <%= @enquiry.service.nature_of_service %><br>
-        Club name: <%= @enquiry.service.club_name %><br>
-        Membership plan: <%= @enquiry.service.membership_plan %><br>
-        Service start date: <%= @enquiry.service.start_at.strftime(time_format) %><br>
-        Service end date: <%= @enquiry.service.end_at.strftime(time_format) %><br>
+        <% if @enquiry.service.subcategory.category.name == 'Commercial Space' %>
+            Area in meters: <%= @enquiry.service.area_in_meters %><br>
+            Amenities available: <%= @enquiry.service.amenities_available %><br>
+        <% end %>
+
+        <% if  @enquiry.service.subcategory.name == 'Others'%>
+            Nature of service: <%= @enquiry.service.nature_of_service %><br>
+        <% end %>
+        <% if  @enquiry.service.subcategory.category.name == 'Membership'%>
+            Club name: <%= @enquiry.service.club_name %><br>
+            Membership plan: <%= @enquiry.service.membership_plan %><br>
+            Service start date: <%= @enquiry.service.start_at.strftime(time_format) %><br>
+            Service end date: <%= @enquiry.service.end_at.strftime(time_format) %><br>
+        <% end %>
+
         Negotiable: <%= @enquiry.service.negotiable ? 'Yes' : 'No'%> <br>
         State: <%= @enquiry.service.state.name %><br>
         City: <%= @enquiry.service.city.name %><br>
@@ -56,8 +64,8 @@
         End Date: <%= @enquiry.end_at.strftime(time_format)%><br>
 
         Expected Price: <%= @enquiry.expected_price%><br>
-        Expected Price: <%= @enquiry.user.email%><br>
-        Expected Price: <%= @enquiry.user.contact%><br>
+        User Email: <%= @enquiry.user.email%><br>
+        User Contact: <%= @enquiry.user.contact%><br>
     <% end %>
   </div>
   <div class="col-sm-4"></div>
