--- a/app/views/customer/welcome/index.html.erb
+++ b/app/views/customer/welcome/index.html.erb
@@ -19,7 +19,7 @@
       <div class="gap gap-small"></div>
       <ul class="list-inline">
         <li>
-          <%= link_to 'Register Here', customer_registration_path, class: 'popup-text' %>
+          <%= link_to 'Register Here', customer_step_one_path, class: 'popup-text' %>
         </li>
         <li>
           <%= link_to 'Forget Password', class: 'popup-text' %>
