--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -90,12 +90,12 @@
       </div>
       <div class="collapse navbar-collapse" id="main-nav-collapse">
         <ul class="nav navbar-nav">
-          <li class="dropdown"><a href="#"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
+          <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
             <ul class="dropdown-menu dropdown-menu-category">
               <li><a href="/products">Products</a></li>
               <li><a href="/services">Services</a></li>
               <% @categories.each do |category| %>
-                  <li><a href="#"><%= category.name %></a>
+                  <li><a href="javascript:void(0)"><%= category.name %></a>
                     <div class="dropdown-menu-category-section">
                       <div class="dropdown-menu-category-section-inner">
                         <div class="dropdown-menu-category-section-content">
