--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -2,53 +2,53 @@
   <div class="row">
     <div class="white-bg">
       <div class="col-sm-6">
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Title:</h4>
             <p><%= @advertisement.title%></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Description:</h4>
             <p><%= @advertisement.description%></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Category:</h4>
             <p><%= @advertisement.subcategory.category.name %></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Subcategory:</h4>
             <p><%= @advertisement.subcategory.name %></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Per hour cost:</h4>
             <p><%= @advertisement.per_hour_cost %></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>Start at:</h4>
             <p><%= @advertisement.start_at.strftime(time_format)%></p>
           </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-xs-12">
           <div class="product-detail">
             <h4>End at:</h4>
             <p><%= @advertisement.end_at.strftime(time_format)%></p>
-          </div>
+          </div>xs
         </div>
       </div>
       <div class="col-sm-6">
         <div class="add-image-con">
           <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
               <% @advertisement.advertisement_images.each do |advertisement_image| %>
                 <span class="img-con">
                   <%= image_tag advertisement_image.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'upload-img' %>
