--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -19,6 +19,7 @@
                 center: 'title',
                 right: ''
             },
+            displayEventTime: false,
             defaultDate: "<%= DateTime.now %>",
 //            editable: true,
             eventLimit: true, // allow "more" link when too many events
