--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -273,6 +273,39 @@
       display: inline-block;
       border: 1px solid #eeeeee;
     }
+    .change-btn{
+      width: 100%;
+      max-width: 400px;
+      background-color: #486d97;
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px;
+      color: #ffffff;
+    }
+    .change-form{
+      margin-top: 20px;
+      .pass-textfield{
+        width: 100%;
+        max-width: 400px;
+        height: 35px;
+      }
+      .change-submit{
+        height: 35px;
+        border-radius: 0px;
+        padding: 8px 40px;
+      }
+    }
+    .img-section{
+      .upload-form{
+        margin-top: 10px;
+        text-align: center;
+        .upload-btn{
+          height: 26px;
+          border-radius: 0px;
+          padding: 0px 40px;
+        }
+      }
+    }
   }
 }
 @media(max-width: 767px){
