--- a/app/views/customer/welcome/profile.html.erb
+++ b/app/views/customer/welcome/profile.html.erb
@@ -25,9 +25,9 @@
             <% if @customer.image.present? %>
                 <%= image_tag @customer.image(:size_500x500), class: 'img-responsive' %>
             <% end %>
-            <%= form_tag customer_update_profile_image_path, method: :put, multipart: true do %>
+            <%= form_tag customer_update_profile_image_path, class: 'upload-form', method: :put, multipart: true do %>
                 <%= file_field_tag :image, class: 'upload-img' %>
-                <%= submit_tag("upload", class: "btn btn-primary") %>
+                <%= submit_tag("upload", class: "btn btn-primary upload-btn") %>
             <% end %>
           </div>
         </div>
